--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <script src="main.js" async></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
+  <div id="cover">
+    <div class="loader"></div>
+  </div>
   <main>
-    <canvas id="game" width="0" height="0"></canvas>
+    <canvas id="game"></canvas>
   </main>
 </body>
 </html>
