--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Game of Life</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#ff5722">
   <link rel="stylesheet" href="style.css">
-  <script src="main.js" defer></script>
+  <script src="main.js" async></script>
 </head>
 <body>
   <div id="cover">
