--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Game of Life</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#ff5722">
+  <meta name="theme-color" content="#607d8b">
   <link rel="stylesheet" href="style.css">
   <script src="main.js" async></script>
 </head>
